app/Python/syntax_error_correction/log.txt
<<<<<<< HEAD
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:5:42: error: expected ‘,’ or ‘;’ before ‘constexpr’
    5 | bool include [ ] = { 0 , 0 , 0 , 0 , 0 } constexpr int W = 13 ;
      |                                          ^~~~~~~~~
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp: In function ‘bool promising(int, int, int)’:
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:6:82: error: ‘W’ was not declared in this scope
    6 | bool promising ( int i , int weight , int total ) { return ( ( weight + total >= W ) && ( ( weight == W ) || ( weight + w [ i ] <= W ) ) ) ;
      |                                                                                  ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp: In function ‘void sumOfSubsets(int, int, int)’:
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:7:113: error: ‘W’ was not declared in this scope
    7 | } void sumOfSubsets ( int i , int weight , int total ) { if ( promising ( i , weight , total ) ) if ( weight == W ) { for ( int x = 0 ;
      |                                                                                                                 ^
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:11:27: error: expected ‘]’ before ‘;’ token
   11 |  else { include [ i = true ;
      |                           ^~
      |                           ]
/var/www/evalseer.com/app/Python/syntax_error_correction/tests/test.cpp:13:23: error: expected ‘;’ before ‘sumOfSubsets’
   13 |  include [ i ] = false sumOfSubsets ( i + 1 , weight , total - w [ i ] ) ;
      |                       ^~~~~~~~~~~~~
      |                       ;
=======
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:3:16: error: expected initializer before 'int'
 } int main ( ) int a = 1 ; 
                ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:6:1: error: 'sum' does not name a type
 sum = identifier ( a , b ) ; 
 ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:7:8: error: 'cout' in namespace 'std' does not name a type
 std :: cout << " Sum: " << sum << std :: endl ;
        ^
C:\xampp\htdocs\Evalseer-Plagiarism\app\Python\syntax_error_correction/tests/test.cpp:8:2: error: expected declaration before '}' token
  }
  ^
>>>>>>> 9067184726ae5d3f3515429a6694b2e52474dd9c
